Added sensitive header blacklist empty

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -45,6 +45,7 @@ zuul:
     routes:
         spring-boot-palindrome:
             path:       /spring-boot-palindrome/api/**
+            sensitiveHeaders: 
             serviceId:  spring-boot-palindrome
             stripPrefix: false
 
