--- a/pom.xml
+++ b/pom.xml
@@ -42,14 +42,9 @@
     		<groupId>org.springframework.cloud</groupId>
         	<artifactId>spring-cloud-starter-zuul</artifactId>
         	<version>1.3.5.RELEASE</version>
-<!--         	<exclusions> -->
-<!--         		<exclusion> -->
-<!--         			<groupId>javax.servlet</groupId> -->
-<!--         			<artifactId>servlet-api</artifactId> -->
-<!--         		</exclusion> -->
-<!--         	</exclusions> -->
     	</dependency>	        
         
+        <!-- It is better off using this servo version instead one packaged with zuul started. -->
         <dependency>
       		<groupId>com.netflix.servo</groupId>
       		<artifactId>servo-core</artifactId>
@@ -71,6 +66,7 @@
         	</exclusions>
 		</dependency> 
 		
+		<!--  proper archaius version -->
 		<dependency>
     		<groupId>com.netflix.archaius</groupId>
         	<artifactId>archaius-core</artifactId>
